duplicated VJ Demos so formatting should be the same

--- a/vj_demo.html
+++ b/vj_demo.html
@@ -144,13 +144,11 @@
 
             </section>
         </div>
-        <div></div>
         <div>
             <section class="container content-section">
-                Event Promotions
+                <hr class="" section-header">VJ Demos </h2>
             </section>
         </div>
-
         <div>
             <section>
                 <div class="tile-group">
@@ -264,9 +262,9 @@
 
 
                 </div>
+            </section>
         </div>
-        </section>
-    </div>
+
     </div>
 
 </body>
