--- a/vj_demo.html
+++ b/vj_demo.html
@@ -136,6 +136,27 @@
                         </div>
                     </div>
 
+                    <div class="tile-single">
+                        <a target="_blank" href="https://youtu.be/JdCHg8ShYWI"><img class="tile-image"
+                                src="VJ_Demo_Photos/minimal_house2.png"> </a>
+
+                        <div class=tile-content>
+                            <div <span class="tile-name"> <a target="_blank" href="https://gumroad.com/discover"> Techno
+                                    Minimal
+                                    House Improv 2 Variant 3D version 2 Progr</a> </span>
+                            </div>
+                            <div <p class="tile-description"> Versions of the Lorem ipsum text have been used in
+                                typesetting
+                                at
+                                least since the 1960s </p>
+                            </div>
+
+                            <div class="tile-links">
+                                <a target="_blank" href="https://gumroad.com/discover"> Gumroad Loop Pack</a>
+                            </div>
+                        </div>
+                    </div>
+
 
 
                 </div>
