using media to get different spacing on mobile

--- a/vj_demo.html
+++ b/vj_demo.html
@@ -165,9 +165,10 @@
 
             </section>
         </div>
+        <div></div>
         <div>
-            <section class="container content-section">
-                <hr class="" section-header">VJ Demos </h2>
+            <section class="container content-section1">
+                VJ Demos
             </section>
         </div>
         <div>
