adding mobile formatting version

--- a/vj_demo.html
+++ b/vj_demo.html
@@ -2,8 +2,15 @@
 <html>
 <title>work1</title>
 <meta name="description" content="this is the description">
-<link rel="stylesheet" href="tile.css" />
+<meta name="viewport" content="width=device-width" />
+
 <link rel="stylesheet" href="style.css" />
+<link rel="stylesheet" href="tile.css" />
+
+<link rel="stylesheet" media="screen and (max-width: 800px)" href="style_mobile.css">
+<link rel="stylesheet" media="screen and (max-width: 800px)" href="tile_mobile.css">
+
+
 
 
 
