reformatting header to vertical layout

--- a/vj_demo.html
+++ b/vj_demo.html
@@ -19,8 +19,8 @@
     <header class="" main-header">
         <nav class="main-nav nav">
             <ul>
-                <li><a href="index.html">Home</a></li>
                 <li><a href="vj_demo.html">VJ Demos</a></li>
+                <li><a href="#eventP">Event Promotions</a></li>
                 <li><a href="about.html">About</a></li>
             </ul>
 
@@ -30,7 +30,7 @@
     <div class="flex-container">
         <div>
             <section class="container content-section">
-                <hr class="" section-header">VJ Demos </h2>
+                VJ Demos
             </section>
         </div>
         <div>
@@ -174,8 +174,8 @@
         </div>
         <div></div>
         <div>
-            <section class="container content-section1">
-                VJ Demos
+            <section class="container content-section1"  id="eventP">
+                Event Promotions
             </section>
         </div>
         <div>
