--- a/index.html
+++ b/index.html
@@ -1,25 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HTML 5 Boilerplate</title>
+<html>
+
+<head>
+    <link rel="stylesheet" href="about.css">
     <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-	<script src="index.js"></script>
-  </body>
-<header>
-    <nav>
-        <ul>
-            <li><a href ="index.html">Home</a></li>
-            <li><a href ="vj_demo.html">VJ Demos</a></li>
-            <li><a href ="about.html">About</a></li>
-        </ul>
-    </nav>
-    <h1>Twilight Courier</h1>
-    <!-- ADD IMAGe to main page-->
-</header>
+    <title>Twilight Courier</title>
+</head>
+
+<body>
+    
+    <div class="flexbox-container">
+        <div class="flexbox-item">
+             <nav class="main-nav nav">
+            <ul>
+                <li><a href="vj_demo.html">VJ Demos</a></li>
+                <li><a href="#eventP">Event Promotions</a></li>
+                <li><a href="about.html">About</a></li>
+            </ul>
+
+        </nav>
+        </div>
+        <img class="flexbox-item flexbox-bio-photo" src="Images/about.JPG">
+        <p class="flexbox-item">casfafafafa afhaf khafk hahashashafh khfkasash kafkasfhujsdf
+            jhasfasfaffahfa jaaf faaf
+        </p>
+
+    </div>
+</body>
 
 </html>
