made a nested flex box and achieved the desired grid spacing

--- a/index.html
+++ b/index.html
@@ -8,23 +8,33 @@
 </head>
 
 <body>
-    
-    <div class="flexbox-container">
+
+    <div class="flexbox-container-top">
         <div class="flexbox-item">
-             <nav class="main-nav nav">
-            <ul>
-                <li><a href="vj_demo.html">VJ Demos</a></li>
-                <li><a href="#eventP">Event Promotions</a></li>
-                <li><a href="about.html">About</a></li>
-            </ul>
+            <nav class="main-nav nav">
+                <ul>
+                    <li><a href="vj_demo.html">VJ Demos</a></li>
+                    <li><a href="#eventP">Event Promotions</a></li>
+                    <li><a href="about.html">About</a></li>
+                </ul>
 
-        </nav>
+            </nav>
         </div>
-        <img class="flexbox-item flexbox-bio-photo" src="Images/about.JPG">
-        <p class="flexbox-item">casfafafafa afhaf khafk hahashashafh khfkasash kafkasfhujsdf
-            jhasfasfaffahfa jaaf faaf
-        </p>
 
+        <div class="flexbox-container">
+            
+
+            <img class="flexbox-item flexbox-bio-photo" src="Images/about.JPG">
+
+            <p class="flexbox-item">casfafafafa afhaf khafk hahashashafh khfkasash kafkasfhujsdf
+                jhasfasfaffahfa jaaf faaf
+            </p>
+            <div class="break"></div> <!-- break -->
+
+            <p class="flexbox-item flexbox-bio-photo">casfafafafa afhaf khafk hahashashafh khfkasash kafkasfhujsdf
+                jhasfasfaffahfa jaaf faaf
+            </p>
+        </div>
     </div>
 </body>
 
