getting stuff aligned better

--- a/vj_demo.html
+++ b/vj_demo.html
@@ -21,7 +21,7 @@
             <ul>
                 <li><a href="vj_demo.html">VJ Demos</a></li>
                 <li><a href="#eventP">Event Promotions</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="index.html">About</a></li>
             </ul>
 
         </nav>
