--- a/index.html
+++ b/index.html
@@ -59,6 +59,14 @@
 
             </div>
         </div>
+
+        <div class="flexbox-item">
+            <p class="flexbox-item-text">Lorem ipsum do  er since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has 
+                survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. I
+                safas 
+            </p>
+
+        </div>
     </div>
 
 </body>
