formatting live performance header made text bigger and bolded

--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
 
                 <img class="flexbox-item flexbox-bio-photo" src="Images/about.JPG">
 
-                <p class="flexbox-item">casfafafafa afhaf khafk hahashashafh khfkasash kafkasfhujsdf
-                    jhasfasfaffahfa jaaf faaf
+                <div class="flexbox-item">
+
+                <p class="ev_header"><strong>Live Performances</strong>
                 </p>
+            </div>
                 <div class="break"></div> <!-- break -->
 
                 <ul class="flexbox-item-ev">
