spacing for event promotions seems better when making window smaller or larger, added a JS script to show window size

--- a/vj_demo.html
+++ b/vj_demo.html
@@ -17,6 +17,18 @@
 
 
 <body class=" tile-page">
+    <p id="demo"></p>
+
+    <script>
+        var w = window.innerWidth;
+        var h = window.innerHeight;
+
+        var x = document.getElementById("demo");
+        console.log("width " + w);
+        console.log("height " + h);
+
+    </script>
+
     <header class="" main-header">
         <nav class="main-nav nav">
             <ul>
@@ -175,7 +187,7 @@
         </div>
         <div></div>
         <div>
-            <section class="container content-section1"  id="eventP">
+            <section class="container content-section1" id="eventP">
                 Event Promotions
             </section>
         </div>
