--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <nav class="main-nav nav">
                 <ul>
                     <li><a href="vj_demo.html">VJ Demos</a></li>
-                    <li><a href="#eventP">Event Promotions</a></li>
+                    <li><a href="vj_demo.html#eventP">Event Promotions</a></li>
                     <li><a href="index.html">About</a></li>
                 </ul>
 
