blue box over element hides

--- a/index.html
+++ b/index.html
@@ -20,7 +20,16 @@
 
     </script>
 
+
+
+    <div class="overflow_box_hide">
+
+    </div>
+
+
     <div class="flexbox-container-top">
+
+
         <div class="flexbox-item">
 
             <nav class="main-nav nav">
@@ -33,13 +42,16 @@
             </nav>
         </div>
 
+
         <div class="flexbox-item">
 
 
             <div class="flexbox-container">
 
 
+
                 <img class="flexbox-item flexbox-bio-photo" src="Images/about.JPG">
+
 
 
                 <div class="flexbox-item">
