formatting site for mobile got rid of seperate styles sheets it was confusing and not working

--- a/vj_demo.html
+++ b/vj_demo.html
@@ -4,13 +4,14 @@
 <meta name="description" content="this is the description">
 <meta name="viewport" content="width=device-width" />
 
-<link rel="stylesheet" href="style.css" />
-<link rel="stylesheet" href="tile.css" />
 
-<!--
+<link rel="stylesheet" media="screen and (min-width: 901px)" href="style.css">
+<link rel="stylesheet" media="screen and (min-width: 901px)" href="tile.css">
+
+
 <link rel="stylesheet" media="screen and (max-width: 900px)" href="style_mobile.css">
 <link rel="stylesheet" media="screen and (max-width: 900px)" href="tile_mobile.css">
--->
+
 
 
 
