removing some of the media querries

--- a/vj_demo.html
+++ b/vj_demo.html
@@ -4,13 +4,9 @@
 <meta name="description" content="this is the description">
 <meta name="viewport" content="width=device-width" />
 
+<link rel="stylesheet" href="style.css" />
+<link rel="stylesheet" href="tile.css" />
 
-<link rel="stylesheet" media="screen and (min-width: 901px)" href="style.css">
-<link rel="stylesheet" media="screen and (min-width: 901px)" href="tile.css">
-
-
-<link rel="stylesheet" media="screen and (max-width: 900px)" href="style_mobile.css">
-<link rel="stylesheet" media="screen and (max-width: 900px)" href="tile_mobile.css">
 
 
 
@@ -29,6 +25,11 @@
         console.log("height " + h);
 
     </script>
+
+<div class="overflow_box_hide">
+
+</div>
+
 
     <header class="" main-header">
         <nav class="main-nav nav">
