--- a/vj_demo.html
+++ b/vj_demo.html
@@ -26,7 +26,7 @@
 
     </script>
 
-<div class="overflow_box_hide">
+<div class="overflow_box_hide_demo_page">
 
 </div>
 
@@ -188,8 +188,13 @@
             </section>
         </div>
         <div></div>
+
+        <div class="link_event_promo" id="eventP">
+
+        </div>
+
         <div>
-            <section class="container content-section1" id="eventP">
+            <section class="container content-section1" id="eventP1">
                 Event Promotions
             </section>
         </div>
