redoing about page with grid

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <title>work1</title>
 <meta name="description" content="this is the description">
 <meta name="viewport" content="width=device-width" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link rel="stylesheet" href="style.css" />
-<link rel="stylesheet" href="tile.css" />
+<link rel="stylesheet" href="about.css" />
 
 
 
@@ -26,21 +27,47 @@
 
     </script>
 
-<div class="overflow_box_hide">
+    <div class="overflow_box_hide">
 
-</div>
+    </div>
 
 
     <header class="" main-header">
         <nav class="main-nav nav">
             <ul>
                 <li><a href="vj_demo.html">VJ Demos</a></li>
-                <li><a href="#eventP">Event Promotions</a></li>
+                <li><a href="vj_demo.html#eventP">Event Promotions</a></li>
                 <li><a href="index.html">About</a></li>
             </ul>
 
         </nav>
 
+
+
+        <div class="g-container">
+
+            
+                <img class="flex_image" src="Images/about.JPG">
+         
+
+
+
+            <div class="g-item">
+                <p class="flexbox-item-text">Lorem ipsum do er since the 1500s, when an unknown printer took a galley of
+                    type and scrambled it to make a type specimen book. It has
+                    survived not only five centuries, but also the leap into electronic typesetting, remaining
+                    essentially
+                    unchanged. I
+                    safas
+                </p>
+
+            </div>
+
+            <div class= "e_test">
+
+            </div>
+
+        </div>
 
 
 </body>
