adjusted dj_list spacing to fit grid boundary

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     
                     <br><br>I have had the opportunity to provide visuals for international DJs such as
                 </p>
-                     <ul>
+                    <ul class = "dj_list">
                     <li>Spectrums Data Forces (ES)</li>
                     <li>Robert Cosmic (ES)</li>
                     <li>JAKAZiD (UK)</li>
