how hard would it be to make a JS script to add these videos for us?

--- a/vj_demo.html
+++ b/vj_demo.html
@@ -3,6 +3,7 @@
 <title>work1</title>
 <meta name="description" content="this is the description">
 <meta name="viewport" content="width=device-width" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
 <link rel="stylesheet" href="style.css" />
 <link rel="stylesheet" href="tile.css" />
@@ -53,22 +54,21 @@
                 <div class="tile-group">
 
                     <div class="tile-single">
-                        <a target="_blank" href="https://youtu.be/JdCHg8ShYWI"><img class="tile-image"
-                                src="VJ_Demo_Photos/minimal_house1.png"> </a>
+                        <a target="_blank" href="https://www.youtube.com/watch?v=lLciJDopqYE"><img class="tile-image"
+                                src="VJ_Demo_Photos/dragon_hardcore2.jpg"> </a>
 
                         <div class=tile-content>
-                            <div <span class="tile-name"> <a target="_blank" href="https://gumroad.com/discover">
-                                    Minimal
-                                    House
-                                    Improv 1</a> </span>
+                            <div <span class="tile-name"> <a target="_blank" href="https://www.youtube.com/watch?v=lLciJDopqYE">
+                                   dragon_hardcore2</a> </span>
                             </div>
 
-                            <div <p class="tile-description"> Music is 700louse by Furz </p>
+                            <div <p class="tile-description"> Nosferatu - No God To Us (37 RUFFNECK'S MIX -
+                                 DJ PANIK OLSKOOL HARDCORE CLASSIC'S 95'—97') </p>
                             </div>
 
 
                             <div class="tile-links">
-                                <a target="_blank" href="https://gumroad.com/discover"> Gumroad Loop Pack</a>
+                                <a target="_blank" href="https://gumroad.com/discover"> </a>
                             </div>
                         </div>
                     </div>
