adding content to VJ demos

--- a/vj_demo.html
+++ b/vj_demo.html
@@ -3,7 +3,7 @@
 <title>work1</title>
 <meta name="description" content="this is the description">
 <meta name="viewport" content="width=device-width" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link rel="stylesheet" href="style.css" />
 <link rel="stylesheet" href="tile.css" />
@@ -27,9 +27,9 @@
 
     </script>
 
-<div class="overflow_box_hide">
+    <div class="overflow_box_hide">
 
-</div>
+    </div>
 
 
     <header class="" main-header">
@@ -52,45 +52,64 @@
         <div>
             <section>
                 <div class="tile-group">
-
+                    <!-- HARDCORE DRAGON 2 -->
                     <div class="tile-single">
                         <a target="_blank" href="https://www.youtube.com/watch?v=lLciJDopqYE"><img class="tile-image"
                                 src="VJ_Demo_Photos/dragon_hardcore2.jpg"> </a>
 
                         <div class=tile-content>
-                            <div <span class="tile-name"> <a target="_blank" href="https://www.youtube.com/watch?v=lLciJDopqYE">
-                                   dragon_hardcore2</a> </span>
+                            <div <span class="tile-name"> <a target="_blank"
+                                    href="https://www.youtube.com/watch?v=lLciJDopqYE">
+                                    dragon_hardcore2</a> </span>
                             </div>
 
                             <div <p class="tile-description"> Nosferatu - No God To Us (37 RUFFNECK'S MIX -
-                                 DJ PANIK OLSKOOL HARDCORE CLASSIC'S 95'—97') </p>
+                                DJ PANIK OLSKOOL HARDCORE CLASSIC'S 95'—97') </p>
                             </div>
 
 
                             <div class="tile-links">
-                                <a target="_blank" href="https://gumroad.com/discover"> </a>
+                                <a target="_blank" href=""> </a>
                             </div>
                         </div>
                     </div>
 
-
+                    <!-- HARDCORE DRAGON 1 -->
                     <div class="tile-single">
-                        <a target="_blank" href="https://youtu.be/JdCHg8ShYWI"><img class="tile-image"
-                                src="VJ_Demo_Photos/minimal_house2.png"> </a>
+                        <a target="_blank" href="https://www.youtube.com/watch?v=wdaA80CLvaQ"><img class="tile-image"
+                                src="VJ_Demo_Photos/dragon_hardcore1.jpg"> </a>
 
                         <div class=tile-content>
-                            <div <span class="tile-name"> <a target="_blank" href="https://gumroad.com/discover"> Techno
-                                    Minimal
-                                    House Improv 2 Variant 3D version 2 Progr</a> </span>
+                            <div <span class="tile-name"> <a target="_blank"
+                                    href="https://www.youtube.com/watch?v=wdaA80CLvaQ">
+                                    dragon_hardcore1</a> </span>
                             </div>
-                            <div <p class="tile-description"> Versions of the Lorem ipsum text have been used in
-                                typesetting
-                                at
-                                least since the 1960s </p>
+
+                            <div <p class="tile-description"> Nosferatu - No God To Us (37 RUFFNECK'S MIX -
+                                DJ PANIK OLSKOOL HARDCORE CLASSIC'S 95'—97') </p>
+                            </div>
+
+
+                            <div class="tile-links">
+                                <a target="_blank" href=""> </a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- TRANCE CAT 1 -->
+                    <div class="tile-single">
+                        <a target="_blank" href="https://www.youtube.com/watch?v=FK2YeyZOs_M"><img class="tile-image"
+                                src="VJ_Demo_Photos/trance_cat1.png"> </a>
+
+                        <div class=tile-content>
+                            <div <span class="tile-name"> <a target="_blank" href="https://www.youtube.com/watch?v=FK2YeyZOs_M">
+                                    trance_cat1</a> </span>
+                            </div>
+                            <div <p class="tile-description"> Endless Wave (Original Mix) · Kamaya Painters </p>
                             </div>
 
                             <div class="tile-links">
-                                <a target="_blank" href="https://gumroad.com/discover"> Gumroad Loop Pack</a>
+                                <a target="_blank" href=""></a>
                             </div>
                         </div>
                     </div>
