added more content to VJ demo page

--- a/vj_demo.html
+++ b/vj_demo.html
@@ -102,7 +102,8 @@
                                 src="VJ_Demo_Photos/trance_cat1.png"> </a>
 
                         <div class=tile-content>
-                            <div <span class="tile-name"> <a target="_blank" href="https://www.youtube.com/watch?v=FK2YeyZOs_M">
+                            <div <span class="tile-name"> <a target="_blank"
+                                    href="https://www.youtube.com/watch?v=FK2YeyZOs_M">
                                     trance_cat1</a> </span>
                             </div>
                             <div <p class="tile-description"> Endless Wave (Original Mix) · Kamaya Painters </p>
@@ -114,65 +115,59 @@
                         </div>
                     </div>
 
+                    <!-- DRAGON STUTTER MOVEMENT TEST -->
                     <div class="tile-single">
-                        <a target="_blank" href="https://youtu.be/JdCHg8ShYWI"><img class="tile-image"
-                                src="VJ_Demo_Photos/minimal_house2.png"> </a>
+                        <a target="_blank" href="https://www.youtube.com/watch?v=UdBF2AyIb1A"><img class="tile-image"
+                                src="VJ_Demo_Photos/dragon thresholdt111.jpg"> </a>
 
                         <div class=tile-content>
-                            <div <span class="tile-name"> <a target="_blank" href="https://gumroad.com/discover"> Techno
-                                    Minimal
-                                    House Improv 2 Variant 3D version 2 Progr</a> </span>
+                            <div <span class="tile-name"> <a target="_blank"
+                                    href="https://www.youtube.com/watch?v=UdBF2AyIb1A">
+
+                                    dragon thresholdt111
+                                    </a> </span>
                             </div>
-                            <div <p class="tile-description"> Versions of the Lorem ipsum text have been used in
-                                typesetting
-                                at
-                                least since the 1960s </p>
+                            <div <p class="tile-description">
+                               testing distortion stutter effect on dragon model's movement  </p>
                             </div>
 
                             <div class="tile-links">
-                                <a target="_blank" href="https://gumroad.com/discover"> Gumroad Loop Pack</a>
+                                <a target="_blank" href=""> </a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- DRAGON LOOP-->
+                    <div class="tile-single">
+                        <a target="_blank" href="https://www.youtube.com/watch?v=C4C1H-dbZaI"><img class="tile-image"
+                                src="VJ_Demo_Photos/dragon_loop.png"> </a>
+
+                        <div class=tile-content>
+                            <div <span class="tile-name"> <a target="_blank" href="https://www.youtube.com/watch?v=C4C1H-dbZaI">
+                                    dragon_loop1</a> </span>
+                            </div>
+                            <div <p class="tile-description"> 
+                                testing camera tracking on dragon model</p>
+                            </div>
+
+                            <div class="tile-links">
+                                <a target="_blank" href=""> </a>
                             </div>
                         </div>
                     </div>
 
                     <div class="tile-single">
-                        <a target="_blank" href="https://youtu.be/JdCHg8ShYWI"><img class="tile-image"
-                                src="VJ_Demo_Photos/minimal_house2.png"> </a>
+                        <a target="_blank" href="https://www.youtube.com/watch?v=HABnIw-cgbs"><img class="tile-image"
+                                src="VJ_Demo_Photos/martial_arts1.jpg"> </a>
 
                         <div class=tile-content>
-                            <div <span class="tile-name"> <a target="_blank" href="https://gumroad.com/discover"> Techno
-                                    Minimal
-                                    House Improv 2 Variant 3D version 2 Progr</a> </span>
+                            <div <span class="tile-name"> <a target="_blank" href="https://www.youtube.com/watch?v=HABnIw-cgbs">
+                                    martial_arts1</a> </span>
                             </div>
-                            <div <p class="tile-description"> Versions of the Lorem ipsum text have been used in
-                                typesetting
-                                at
-                                least since the 1960s </p>
+                            <div <p class="tile-description"> </p>
                             </div>
 
                             <div class="tile-links">
-                                <a target="_blank" href="https://gumroad.com/discover"> Gumroad Loop Pack</a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="tile-single">
-                        <a target="_blank" href="https://youtu.be/JdCHg8ShYWI"><img class="tile-image"
-                                src="VJ_Demo_Photos/minimal_house2.png"> </a>
-
-                        <div class=tile-content>
-                            <div <span class="tile-name"> <a target="_blank" href="https://gumroad.com/discover"> Techno
-                                    Minimal
-                                    House Improv 2 Variant 3D version 2 Progr</a> </span>
-                            </div>
-                            <div <p class="tile-description"> Versions of the Lorem ipsum text have been used in
-                                typesetting
-                                at
-                                least since the 1960s </p>
-                            </div>
-
-                            <div class="tile-links">
-                                <a target="_blank" href="https://gumroad.com/discover"> Gumroad Loop Pack</a>
+                                <a target="_blank" href=""> </a>
                             </div>
                         </div>
                     </div>
