adding content to demo page

--- a/vj_demo.html
+++ b/vj_demo.html
@@ -127,10 +127,10 @@
                                     href="https://www.youtube.com/watch?v=UdBF2AyIb1A">
 
                                     dragon thresholdt111
-                                    </a> </span>
+                                </a> </span>
                             </div>
                             <div <p class="tile-description">
-                               testing distortion stutter effect on dragon model's movement  </p>
+                                testing distortion stutter effect on dragon model's movement </p>
                             </div>
 
                             <div class="tile-links">
@@ -144,10 +144,11 @@
                                 src="VJ_Demo_Photos/dragon_loop.png"> </a>
 
                         <div class=tile-content>
-                            <div <span class="tile-name"> <a target="_blank" href="https://www.youtube.com/watch?v=C4C1H-dbZaI">
+                            <div <span class="tile-name"> <a target="_blank"
+                                    href="https://www.youtube.com/watch?v=C4C1H-dbZaI">
                                     dragon_loop1</a> </span>
                             </div>
-                            <div <p class="tile-description"> 
+                            <div <p class="tile-description">
                                 testing camera tracking on dragon model</p>
                             </div>
 
@@ -156,16 +157,18 @@
                             </div>
                         </div>
                     </div>
-
+                    <!-- MARTIAL ARTS 1-->
                     <div class="tile-single">
                         <a target="_blank" href="https://www.youtube.com/watch?v=HABnIw-cgbs"><img class="tile-image"
                                 src="VJ_Demo_Photos/martial_arts1.jpg"> </a>
 
                         <div class=tile-content>
-                            <div <span class="tile-name"> <a target="_blank" href="https://www.youtube.com/watch?v=HABnIw-cgbs">
+                            <div <span class="tile-name"> <a target="_blank"
+                                    href="https://www.youtube.com/watch?v=HABnIw-cgbs">
                                     martial_arts1</a> </span>
                             </div>
-                            <div <p class="tile-description"> </p>
+                            <div <p class="tile-description">
+                                </p>
                             </div>
 
                             <div class="tile-links">
@@ -174,23 +177,65 @@
                         </div>
                     </div>
 
+                    <!-- SYNTHCITY 1-->
                     <div class="tile-single">
-                        <a target="_blank" href="https://youtu.be/JdCHg8ShYWI"><img class="tile-image"
-                                src="VJ_Demo_Photos/minimal_house2.png"> </a>
+                        <a target="_blank" href="https://www.youtube.com/watch?v=NOkid0PfQBQ"><img class="tile-image"
+                                src="VJ_Demo_Photos/scity1.png"> </a>
 
                         <div class=tile-content>
-                            <div <span class="tile-name"> <a target="_blank" href="https://gumroad.com/discover"> Techno
-                                    Minimal
-                                    House Improv 2 Variant 3D version 2 Progr</a> </span>
+                            <div <span class="tile-name"> <a target="_blank"
+                                    href="https://www.youtube.com/watch?v=NOkid0PfQBQ">
+                                    scity1</a> </span>
                             </div>
-                            <div <p class="tile-description"> Versions of the Lorem ipsum text have been used in
-                                typesetting
-                                at
-                                least since the 1960s </p>
+                            <div <p class="tile-description">
+                                Perturbator & Dynatron - Volcanic Machinery
+                                </p>
                             </div>
 
                             <div class="tile-links">
-                                <a target="_blank" href="https://gumroad.com/discover"> Gumroad Loop Pack</a>
+                                <a target="_blank" href=""></a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- MINIMAL HOUSE 1 1-->
+                    <div class="tile-single">
+                        <a target="_blank" href="https://www.youtube.com/watch?v=0ZeTI24TFa4"><img class="tile-image"
+                                src="VJ_Demo_Photos/minimal_house1.png"> </a>
+
+                        <div class=tile-content>
+                            <div <span class="tile-name"> <a target="_blank"
+                                    href="https://www.youtube.com/watch?v=0ZeTI24TFa4">
+                                    minimal_house_1</a> </span>
+                            </div>
+                            <div <p class="tile-description">
+                                Furz - 700Louse
+                                </p>
+                            </div>
+
+                            <div class="tile-links">
+                                <a target="_blank" href=""></a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- MINIMAL HOUSE 1 1-->
+                    <div class="tile-single">
+                        <a target="_blank" href="https://www.youtube.com/watch?v=0ZeTI24TFa4"><img class="tile-image"
+                                src="VJ_Demo_Photos/minimal_house1.png"> </a>
+
+                        <div class=tile-content>
+                            <div <span class="tile-name"> <a target="_blank"
+                                    href="https://www.youtube.com/watch?v=0ZeTI24TFa4">
+                                    minimal_house_1</a> </span>
+                            </div>
+                            <div <p class="tile-description">
+                                Furz - 700Louse
+                                </p>
+                            </div>
+
+                            <div class="tile-links">
+                                <a target="_blank" href=""></a>
                             </div>
                         </div>
                     </div>
