adding content to VJ Demos

--- a/vj_demo.html
+++ b/vj_demo.html
@@ -188,7 +188,7 @@
                                     scity1</a> </span>
                             </div>
                             <div <p class="tile-description">
-                                Perturbator & Dynatron - Volcanic Machinery
+                               Volcanic Machinery · Perturbator & Dynatron 
                                 </p>
                             </div>
 
@@ -209,7 +209,7 @@
                                     minimal_house_1</a> </span>
                             </div>
                             <div <p class="tile-description">
-                                Furz - 700Louse
+                               700Louse · Furz 
                                 </p>
                             </div>
 
@@ -219,18 +219,18 @@
                         </div>
                     </div>
 
-                    <!-- MINIMAL HOUSE 1 1-->
+                    <!-- STARFOX 1-->
                     <div class="tile-single">
-                        <a target="_blank" href="https://www.youtube.com/watch?v=0ZeTI24TFa4"><img class="tile-image"
-                                src="VJ_Demo_Photos/minimal_house1.png"> </a>
+                        <a target="_blank" href="https://www.youtube.com/watch?v=u4IOr8PtUGA"><img class="tile-image"
+                                src="VJ_Demo_Photos/starfox1.jpg"> </a>
 
                         <div class=tile-content>
                             <div <span class="tile-name"> <a target="_blank"
-                                    href="https://www.youtube.com/watch?v=0ZeTI24TFa4">
-                                    minimal_house_1</a> </span>
+                                    href="https://www.youtube.com/watch?v=u4IOr8PtUGA">
+                                    starfox2</a> </span>
                             </div>
                             <div <p class="tile-description">
-                                Furz - 700Louse
+                                Prism · MAYA AKAI
                                 </p>
                             </div>
 
@@ -240,6 +240,26 @@
                         </div>
                     </div>
 
+                    <!-- HARDCORE TRIGGERS2-->
+                    <div class="tile-single">
+                        <a target="_blank" href="https://www.youtube.com/watch?v=kyEwN4wEKOk"><img class="tile-image"
+                                src="VJ_Demo_Photos/hardcore2.jpg"> </a>
+
+                        <div class=tile-content>
+                            <div <span class="tile-name"> <a target="_blank"
+                                    href="https://www.youtube.com/watch?v=kyEwN4wEKOk">
+                                    hardcore_triggers2</a> </span>
+                            </div>
+                            <div <p class="tile-description">
+                                Möbius · USAO and Camellia
+                                </p>
+                            </div>
+
+                            <div class="tile-links">
+                                <a target="_blank" href=""></a>
+                            </div>
+                        </div>
+                    </div>
 
 
                 </div>
