added content to VJ demos

--- a/vj_demo.html
+++ b/vj_demo.html
@@ -65,7 +65,8 @@
                                     dragon_hardcore2</a> </span>
                             </div>
 
-                            <div <p class="tile-description"> Nosferatu - No God To Us (37 RUFFNECK'S MIX -
+                            <div <p class="tile-description">
+                                Nosferatu - No God To Us (37 RUFFNECK'S MIX -
                                 DJ PANIK OLSKOOL HARDCORE CLASSIC'S 95'—97') </p>
                             </div>
 
@@ -188,7 +189,7 @@
                                     scity1</a> </span>
                             </div>
                             <div <p class="tile-description">
-                               Volcanic Machinery · Perturbator & Dynatron 
+                                Volcanic Machinery · Perturbator & Dynatron
                                 </p>
                             </div>
 
@@ -209,7 +210,7 @@
                                     minimal_house_1</a> </span>
                             </div>
                             <div <p class="tile-description">
-                               700Louse · Furz 
+                                700Louse · Furz
                                 </p>
                             </div>
 
@@ -260,6 +261,70 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- ELECTRIC HAZE1-->
+                    <div class="tile-single">
+                        <a target="_blank" href="https://www.youtube.com/watch?v=FtEg-pnPehY"><img class="tile-image"
+                                src="VJ_Demo_Photos/electric_haze1.jpg"> </a>
+
+                        <div class=tile-content>
+                            <div <span class="tile-name"> <a target="_blank"
+                                    href="https://www.youtube.com/watch?v=FtEg-pnPehY">
+                                    industrial1</a> </span>
+                            </div>
+                            <div <p class="tile-description">
+                                Desertion (Phase Fatale Remix) · The Soft Moon 
+                                </p>
+                            </div>
+
+                            <div class="tile-links">
+                                <a target="_blank" href=""></a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- SHADOW PLAY1-->
+                    <div class="tile-single">
+                        <a target="_blank" href="https://www.youtube.com/watch?v=qTBIZqQgWIM"><img class="tile-image"
+                                src="VJ_Demo_Photos/shadow1.jpg"> </a>
+
+                        <div class=tile-content>
+                            <div <span class="tile-name"> <a target="_blank"
+                                    href="https://www.youtube.com/watch?v=qTBIZqQgWIM">
+                                    shadow_play2</a> </span>
+                            </div>
+                            <div <p class="tile-description">
+                                CULT MEMBERS ONLY · TOKYOPILL
+                                </p>
+                            </div>
+
+                            <div class="tile-links">
+                                <a target="_blank" href=""></a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- DSET1-->
+                    <div class="tile-single">
+                        <a target="_blank" href="https://www.youtube.com/watch?v=B4aZBIPUR7k"><img class="tile-image"
+                                src="VJ_Demo_Photos/dset2.jpg"> </a>
+
+                        <div class=tile-content>
+                            <div <span class="tile-name"> <a target="_blank"
+                                    href="https://www.youtube.com/watch?v=B4aZBIPUR7k">
+                                    techno1</a> </span>
+                            </div>
+                            <div <p class="tile-description">
+                                Firecracker · G.I.T.S Megatech Body OST
+                                </p>
+                            </div>
+
+                            <div class="tile-links">
+                                <a target="_blank" href=""></a>
+                            </div>
+                        </div>
+                    </div>
+
 
 
                 </div>
